2.6?
    - Modified search algorithms so LaTeX commands are removed before search. For instance, this
      means that the value "test \textit{case}" now matches the search string "test case".
    - Can now create lock file while writing a bib file. The lock file is checked before
      saving, and before scanning an externally changed file, in order to avoid reading an
      unfinished file.
    - Added support for dragging a file link from the file column to another application.
    - Added toolbar button and shortcut (Alt-F) in entry editor for autosetting file links.
    - Improved ISI import filter so DOI information is included.
    - Fixed bug in handling of LaTeX character sequences - now sequences with = as command
      character (e.g. "\={A}") are recognized.
    - Fixed bug: gray out / hide setting in groups panel is overridden on startup
      by search mode selection. Added separate prefs key for the groups setting.
      Fix suggested by Igor L. Chernyavsky.
    - Fixed bug: cookie manager installed by Download button in file field editor throws
      an exception when trying to fetch from Medline.
    - Fixed bug: temporary files don't get deleted on shutdown.
    - Disabled table column reordering in import inspection window, since a user reported
      problems when using this.
    - Changed years from 2008 to 2009 in splash image.
2.5
    - Modified export layout procedure so missing formatters can be reported in the error
      output. Export now succeeds with warnings added where formatters are missing.
    - Conditional blocks (\begin{field}...\end{field}) in layout files can now be given a
      semicolon-separated list of fields as argument. All fields must then be set for output
      to be given.
    - Changed RIS import so multiple abstract fields in an entry are concatenated.
    - Added quoting of some special characters in SQL export, based on Kyle Crabtree's patch.
    - Fixed bug in MS Office 2007 XML export - editor names missing.