@@ -10,7 +10,7 @@
 %V \volume
 %6
 %N \number
-%P
+%P \pages
 %& 
 %Y 
 %S 
