@@ -10,7 +10,7 @@
 %V
 %6
 %N \lastchecked
-%P
+%P \pages
 %& 
 %Y 
 %S 
