@@ -1,4 +1,6 @@
 2.6?
+    - Added pages information to several entry types in Endnote export.
+    - Modified LastPage formatter so it returns the number when only the number of pages is given.
     - Modified search algorithms so LaTeX commands are removed before search. For instance, this
       means that the value "test \textit{case}" now matches the search string "test case".
     - Can now create lock file while writing a bib file. The lock file is checked before
